...
                .tabItem {
                    Label("Главная", systemImage: "house.fill")
                }

            RecipeListView()
                .tabItem {
                    Label("Рецепты", systemImage: "book.fill")
                }

            SearchView()
                .tabItem {
                    Label("Поиск", systemImage: "magnifyingglass")
                }
...
